...
  return (
    <View testID={testID} style={styles.container}>
      <View style={styles.infosUserContainer}>
        <View style={styles.checkboxPosition}>
          <Checkbox
            onPress={onPressSelectedUser}
            testID={'UserCard.CheckBox' + user.id}
            mode={selected ? 'active' : 'none'}
          />
        </View>
        <View style={styles.infoUser}>
          <Image style={styles.tinyLogo} source={{uri: user?.avatar_url}} />
          <CustomText textType="title">{user?.id}</CustomText>
          <CustomText textType="title">{user?.login}</CustomText>
        </View>
      </View>
      <View style={styles.buttonContainer}>
        <Button
          testID={'UserCard.ViewProfileButton' + user.id}
          onPress={onPressViewProfile}>
          View profile
        </Button>
      </View>
    </View>
  );
...
