export const wordingEn: Record<string, string> = {
  // Common
  ok: 'okay',
  errorKeyItem: 'Error: key item not found, please check your wording !',
  warning: 'Warning',
  error: 'Error',

  // App Page
  titlePage: 'Github Search',
  elementsSelected: 'elements selected',
  duplicatedUser: '(duplicated)',
  textNoResultsFound: 'No results found !',
  textBeginSearch:
    "Please ! Begin the search by typing the user you're looking for.",

  // SearchInput
  defaultTextPlaceholder: 'Search input',

  // Fetch
  alertFiveRequestsRemaining:
    'You can make 5 more requests until you have to wait a time and be able to make new requests',
  alertNoMoreRequestsRemainingWithDate:
    'You have exceeed the limit of requests, please wait until :',
  alertNoMoreRequestsRemaining:
    'You have exceeed the limit of requests, take a break and try again',
  alertErrorGenericMessage: 'A error has occured, with a code error',
};
