...
      events_url: 'https://api.github.com/users/SebCarret/events{/privacy}',
      followers_url: 'https://api.github.com/users/SebCarret/followers',
      following_url:
        'https://api.github.com/users/SebCarret/following{/other_user}',
      gists_url: 'https://api.github.com/users/SebCarret/gists{/gist_id}',
      gravatar_id: '',
      html_url: 'https://github.com/SebCarret',
      id: 48792499,
      login: 'SebCarret',
      node_id: 'MDQ6VXNlcjQ4NzkyNDk5',
      organizations_url: 'https://api.github.com/users/SebCarret/orgs',
      received_events_url:
        'https://api.github.com/users/SebCarret/received_events',
...
